# sgct-ndi

./: .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml  cmake-multi-platform.yml
src/: main.cpp
src/app/: CMakeLists.txt  main.cpp  multi_viewport.xml  single_node.xml  two_nodes_stereo_dummy.xml
